# BDV3-Vote-Packages

./: LICENSE  README.md  pyproject.toml
botlistme_notifier/: admin.py  apps.py  views.py
botlistme_notifier/migrations/: 0001_initial.py
discordbotlist_notifier/: admin.py  views.py
discordbotlist_notifier/migrations/: 0001_initial.py
discordlist_notifier/: README.md  apps.py  views.py
discordlist_notifier/migrations/: 0001_initial.py
topgg_notifier/: cog.py  models.py  views.py
vote_links/: README.md  apps.py  cog.py
vote_packages/: README.md
vote_packages/botlistme_notifier/botlistme_notifier/: README.md  models.py  urls.py
vote_packages/discordbotlist_notifier/discordbotlist_notifier/: apps.py  models.py  urls.py
vote_packages/discordlist_notifier/discordlist_notifier/: __init__.py  admin.py  models.py  urls.py  views.py
vote_packages/topgg_notifier/topgg_notifier/: README.md  __init__.py  admin.py  apps.py  urls.py
vote_packages/topgg_notifier/topgg_notifier/migrations/: 0001_initial.py
vote_packages/vote_package/vote_pkg/: README.md  apps.py
