[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bdv3-vote-packages"
version = "0.1.0"
description = "Standalone vote packages for BallsDex 3.0"
requires-python = ">=3.12"

[tool.setuptools]
packages = [
    "topgg_notifier",
    "topgg_notifier.migrations",
    "discordlist_notifier",
    "discordlist_notifier.migrations",
    "discordbotlist_notifier",
    "discordbotlist_notifier.migrations",
    "botlistme_notifier",
    "botlistme_notifier.migrations",
    "vote_links",
]

[tool.setuptools.package-dir]
topgg_notifier = "topgg_notifier"
discordlist_notifier = "discordlist_notifier"
discordbotlist_notifier = "discordbotlist_notifier"
botlistme_notifier = "botlistme_notifier"
vote_links = "vote_links"
